<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstService</string>
    <string name="action_settings">Settings</string>
    <string name="btnstart">启动Service</string>
    <string name="btnstop">停止Service</string>
    <string name="btnbind">绑定Service</string>
    <string name="btnunbind">解绑Service</string>
    <string name="btnget">获取数据</string>
</resources>